[gd_scene load_steps=9 format=3 uid="uid://dmqshi2bxfkw"]

[ext_resource type="Script" path="res://UI/Upgrade Menu/upgrade_menu.gd" id="1_73btx"]
[ext_resource type="StyleBox" uid="uid://dq3qxbdud5bs" path="res://UI/Upgrade Menu/menu_button.tres" id="1_y1gq2"]
[ext_resource type="Texture2D" uid="uid://drlkrgtldm7v8" path="res://art/UI/menu_panel.png" id="2_w34vv"]
[ext_resource type="Texture2D" uid="uid://cf7r1wb5v5ft7" path="res://art/icons/saw_blade.png" id="4_fbirp"]

[sub_resource type="Theme" id="Theme_jx4jo"]
Button/styles/normal = ExtResource("1_y1gq2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ay4nm"]
texture = ExtResource("2_w34vv")

[sub_resource type="Theme" id="Theme_46rew"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_ay4nm")

[sub_resource type="ImageTexture" id="ImageTexture_3y02g"]

[node name="Upgrade_Menu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jx4jo")
script = ExtResource("1_73btx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_46rew")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Upgrade1" type="TextureButton" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("4_fbirp")
ignore_texture_size = true
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Upgrade2" type="TextureButton" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
texture_normal = ExtResource("4_fbirp")
ignore_texture_size = true
stretch_mode = 5

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Confirm"
icon = SubResource("ImageTexture_3y02g")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="button_down" from="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/Upgrade1" to="." method="_on_upgrade_1_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer2/Upgrade2" to="." method="_on_upgrade_2_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/ConfirmButton" to="." method="_on_confirm_button_button_down"]
